--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="/angular-pong/inline.bundle.jsinline.bundle.js"></script>
-  <script type="text/javascript" src="/angular-pong/inline.bundle.jspolyfills.bundle.js"></script>
-  <script type="text/javascript" src="/angular-pong/inline.bundle.jsstyles.bundle.js"></script>
-  <script type="text/javascript" src="/angular-pong/inline.bundle.jsvendor.bundle.js"></script>
-  <script type="text/javascript" src="/angular-pong/inline.bundle.jsmain.bundle.js"></script>
-  </body>
+  <script type="text/javascript" src="/angular-pong/inline.bundle.js"></script>
+  <script type="text/javascript" src="/angular-pong/polyfills.bundle.js"></script>
+  <script type="text/javascript" src="/angular-pong/styles.bundle.js"></script>
+  <script type="text/javascript" src="/angular-pong/vendor.bundle.js"></script>
+  <script type="text/javascript" src="/angular-pong/main.bundle.js"></script>
+ </body>
 </html>
